--- a/mobile_app/android/gradle/libs.versions.toml
+++ b/mobile_app/android/gradle/libs.versions.toml
@@ -1,9 +1,11 @@
 [versions]
 agp = "8.8.0"
 androidxJunit = "1.1.5"
+biometric = "1.1.0"
 coilComposeVersion = "3.1.0"
 composeBomVersion = "2024.02.00"
 converterGson = "2.9.0"
+datastore = "1.1.7"
 datastorePreferences = "1.1.4"
 espressoCoreVersion = "3.5.1"
 firebaseBom = "33.14.0"
@@ -15,11 +17,14 @@ coreKtx = "1.15.0"
 junit = "4.13.2"
 kotlinxSerializationJson = "1.6.3"
 ktorClientAuth = "3.1.2"
+ktorClientCio = "3.2.1"
+ktorClientCore = "3.2.1"
 ktorClientLogging = "3.1.2"
 ktorClientOkhttp = "3.1.3"
 langchain4j = "0.26.0"
 langchain4jOpenai = "0.26.0"
 langchain4jOpenAiVersion = "0.26.0"
+lazysodiumAndroid = "5.0.2"
 library = "4.1.0"
 lifecycleRuntimeKtx = "2.8.7"
 lifecycleViewmodelCompose = "2.8.7"
@@ -34,9 +39,12 @@ multidex = "2.0.1"
 multimult = "0.2.3"
 navigationCompose = "2.8.9"
 okhttp = "4.12.0"
+protobufJavalite = "3.21.11"
+protobufKotlinLite = "3.21.11"
 retrofit = "2.9.0"
 rpcCore = "0.2.7"
 securityCrypto = "1.1.0-alpha06"
+solanaKt = "0.0.1"
 walletSdk = "2.0.0"
 web3Solana = "0.2.5"
 workRuntimeKtx = "2.10.0"
@@ -48,8 +56,10 @@ appcompat = "1.6.1"
 material = "1.10.0"
 
 [libraries]
+androidx-biometric = { module = "androidx.biometric:biometric", version.ref = "biometric" }
 androidx-compose-bom-v20240200 = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-espresso-core-v351 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationFragment" }
@@ -88,18 +98,24 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 generativeai = { group = "com.google.ai.client.generativeai", name = "generativeai", version.ref = "generativeai" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktorClientAuth" }
+ktor-client-cio-v321 = { module = "io.ktor:ktor-client-cio", version.ref = "ktorClientCio" }
+ktor-client-core-v321 = { module = "io.ktor:ktor-client-core", version.ref = "ktorClientCore" }
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktorClientLogging" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktorClientOkhttp" }
 langchain4j = { module = "dev.langchain4j:langchain4j", version.ref = "langchain4j" }
 langchain4j-open-ai = { module = "dev.langchain4j:langchain4j-open-ai", version.ref = "langchain4jOpenAiVersion" }
 langchain4j-openai = { module = "dev.langchain4j:langchain4j-openai", version.ref = "langchain4jOpenai" }
+lazysodium-android = { module = "com.goterl:lazysodium-android", version.ref = "lazysodiumAndroid" }
 library = { module = "com.github.chuckerteam.chucker:library", version.ref = "library" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 mobile-wallet-adapter-clientlib-ktx = { module = "com.solanamobile:mobile-wallet-adapter-clientlib-ktx", version.ref = "mobileWalletAdapterClientlibKtx" }
 multimult = { module = "io.github.funkatronics:multimult", version.ref = "multimult" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufJavalite" }
+protobuf-kotlin-lite = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufKotlinLite" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 rpc-core = { module = "com.solanamobile:rpc-core", version.ref = "rpcCore" }
+solana-kt = { module = "com.metaplex:solana.kt", version.ref = "solanaKt" }
 wallet-sdk = { module = "org.stellar:wallet-sdk", version.ref = "walletSdk" }
 web3-solana = { module = "com.solanamobile:web3-solana", version.ref = "web3Solana" }
 vision-internal-vkp = { group = "com.google.mlkit", name = "vision-internal-vkp", version.ref = "visionInternalVkp" }
