--- a/mobile_app/android/gradle/libs.versions.toml
+++ b/mobile_app/android/gradle/libs.versions.toml
@@ -22,6 +22,8 @@ ktorClientCore = "3.2.1"
 ktorClientLogging = "3.1.2"
 ktorClientOkhttp = "3.1.3"
 langchain4j = "0.26.0"
+langchain4jGoogleAiGemini = "0.24.0"
+langchain4jGoogleAiGeminiVersion = "0.36.1"
 langchain4jOpenai = "0.26.0"
 langchain4jOpenAiVersion = "0.26.0"
 lazysodiumAndroid = "5.0.2"
@@ -34,6 +36,7 @@ generativeai = "0.9.0"
 googleAndroidLibrariesMapsplatformSecretsGradlePlugin = "2.0.1"
 loggingInterceptor = "4.10.0"
 materialIconsExtended = "1.7.8"
+metaplexAndroid = "1.5.0"
 mobileWalletAdapterClientlibKtx = "2.0.3"
 multidex = "2.0.1"
 multimult = "0.2.3"
@@ -44,7 +47,9 @@ protobufKotlinLite = "3.21.11"
 retrofit = "2.9.0"
 rpcCore = "0.2.7"
 securityCrypto = "1.1.0-alpha06"
+solana = "0.2.1"
 solanaKt = "0.0.1"
+solanaktVersion = "2.1.1"
 walletSdk = "2.0.0"
 web3Solana = "0.2.5"
 workRuntimeKtx = "2.10.0"
@@ -54,6 +59,7 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.6.1"
 material = "1.10.0"
+jetbrainsKotlinJvm = "2.0.0"
 
 [libraries]
 androidx-biometric = { module = "androidx.biometric:biometric", version.ref = "biometric" }
@@ -103,11 +109,14 @@ ktor-client-core-v321 = { module = "io.ktor:ktor-client-core", version.ref = "kt
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktorClientLogging" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktorClientOkhttp" }
 langchain4j = { module = "dev.langchain4j:langchain4j", version.ref = "langchain4j" }
+langchain4j-google-ai-gemini = { module = "dev.langchain4j:langchain4j-google-ai-gemini", version.ref = "langchain4jGoogleAiGemini" }
+langchain4j-google-ai-gemini-v0361 = { module = "dev.langchain4j:langchain4j-google-ai-gemini", version.ref = "langchain4jGoogleAiGeminiVersion" }
 langchain4j-open-ai = { module = "dev.langchain4j:langchain4j-open-ai", version.ref = "langchain4jOpenAiVersion" }
 langchain4j-openai = { module = "dev.langchain4j:langchain4j-openai", version.ref = "langchain4jOpenai" }
 lazysodium-android = { module = "com.goterl:lazysodium-android", version.ref = "lazysodiumAndroid" }
 library = { module = "com.github.chuckerteam.chucker:library", version.ref = "library" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+metaplex-android = { module = "com.github.metaplex-foundation:metaplex-android", version.ref = "metaplexAndroid" }
 mobile-wallet-adapter-clientlib-ktx = { module = "com.solanamobile:mobile-wallet-adapter-clientlib-ktx", version.ref = "mobileWalletAdapterClientlibKtx" }
 multimult = { module = "io.github.funkatronics:multimult", version.ref = "multimult" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
@@ -115,7 +124,9 @@ protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.
 protobuf-kotlin-lite = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufKotlinLite" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 rpc-core = { module = "com.solanamobile:rpc-core", version.ref = "rpcCore" }
+solana = { module = "foundation.metaplex:solana", version.ref = "solana" }
 solana-kt = { module = "com.metaplex:solana.kt", version.ref = "solanaKt" }
+solanakt = { module = "com.github.metaplex-foundation:SolanaKT", version.ref = "solanaktVersion" }
 wallet-sdk = { module = "org.stellar:wallet-sdk", version.ref = "walletSdk" }
 web3-solana = { module = "com.solanamobile:web3-solana", version.ref = "web3Solana" }
 vision-internal-vkp = { group = "com.google.mlkit", name = "vision-internal-vkp", version.ref = "visionInternalVkp" }
@@ -136,4 +147,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 google-android-libraries-mapsplatform-secrets-gradle-plugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "googleAndroidLibrariesMapsplatformSecretsGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 
