--- a/challanger/package.json
+++ b/challanger/package.json
@@ -3,22 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/server.ts"
+    "start": "ts-node src/server.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.0",
     "dotenv": "^17.2.0",
     "ethers": "^6.15.0",
     "fastify": "^5.4.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
-    "@openzeppelin/contracts": "^5.0.0"
+    "redis": "^5.6.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2"
   }
 }
