--- a/challanger/tsconfig.json
+++ b/challanger/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "commonjs",
+    "module": "es2022",
     "lib": ["es2020"],
     "declaration": true,
     "strict": true,
@@ -27,6 +27,6 @@
     },
     "outDir": "./dist"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/utils"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
