--- a/challanger/package.json
+++ b/challanger/package.json
@@ -17,6 +17,7 @@
     "fastify": "^5.4.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
+    "openai": "^5.10.1",
     "redis": "^5.6.0"
   },
   "devDependencies": {
