--- a/challanger/package.json
+++ b/challanger/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "dev": "nodemon --exec ts-node src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^2.1.0",
     "@openzeppelin/contracts": "^5.0.0",
     "dotenv": "^17.2.0",
     "ethers": "^6.15.0",
@@ -24,6 +27,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.14",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2"
   }
