--- a/challanger/tsconfig.json
+++ b/challanger/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "es2022",
+    "module": "esnext",
     "lib": ["es2020"],
     "declaration": true,
     "strict": true,
@@ -20,13 +20,19 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     },
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "allowJs": true,
+    "checkJs": true
   },
-  "include": ["src/**/*", "src/utils"],
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
