--- a/evm_launchpad/package.json
+++ b/evm_launchpad/package.json
@@ -29,6 +29,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.2",
     "chai": "^4.3.7",
+    "dotenv": "^17.2.0",
     "hardhat": "^2.17.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solhint": "^3.4.1",
