--- a/platform/package.json
+++ b/platform/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.3"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "next": "^15.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.344.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
+    "typescript": "^5.3.3",
+    "@types/node": "^20.11.24",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "tailwindcss": "^4.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.4.3",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3.0.0",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35"
   }
 }
