refactor: code refactor

--- a/mobile_app/android/gradle.properties
+++ b/mobile_app/android/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+ALLORA_API_KEY=a
+COIN_GECKO_KEY=a
+ELFA_AI_API_KEY=a
+HELIUS_API_KEY=a
+MESSARI_API_KEY=a
