--- a/mobile_app/android/gradle/libs.versions.toml
+++ b/mobile_app/android/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ biometric = "1.1.0"
 coilComposeVersion = "3.1.0"
 composeBomVersion = "2024.02.00"
 converterGson = "2.9.0"
+core = "5.0.0"
 datastore = "1.1.7"
 datastorePreferences = "1.1.4"
 espressoCoreVersion = "3.5.1"
@@ -61,6 +62,7 @@ espressoCore = "3.6.1"
 appcompat = "1.6.1"
 material = "1.10.0"
 jetbrainsKotlinJvm = "2.0.0"
+metamask = "0.6.6"
 
 [libraries]
 androidx-biometric = { module = "androidx.biometric:biometric", version.ref = "biometric" }
@@ -83,6 +85,7 @@ androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 coil3-coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilComposeVersion" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+core = { module = "org.web3j:core", version.ref = "core" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
@@ -117,6 +120,7 @@ langchain4j-openai = { module = "dev.langchain4j:langchain4j-openai", version.re
 lazysodium-android = { module = "com.goterl:lazysodium-android", version.ref = "lazysodiumAndroid" }
 library = { module = "com.github.chuckerteam.chucker:library", version.ref = "library" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+metamask-android-sdk = { module = "io.metamask.androidsdk:metamask-android-sdk", version.ref = "metamask"}
 metaplex-android = { module = "com.github.metaplex-foundation:metaplex-android", version.ref = "metaplexAndroid" }
 mobile-wallet-adapter-clientlib-ktx = { module = "com.solanamobile:mobile-wallet-adapter-clientlib-ktx", version.ref = "mobileWalletAdapterClientlibKtx" }
 multimult = { module = "io.github.funkatronics:multimult", version.ref = "multimult" }
